--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   match: ^0.4.1
   auto_size_text: ^3.0.0
   shared_preferences: ^2.2.2
+  validatorless: ^1.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
