--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   auto_size_text: ^3.0.0
   shared_preferences: ^2.2.2
   validatorless: ^1.2.3
+  flutter_awesome_select: ^6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
